--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "Twin-panel file manager",
   "main": "./dist/main.js",
   "dependencies": {
+    "bootstrap": "v4.0.0-alpha.6",
     "vue": "^2.1.10",
     "vue-electron": "^1.0.6"
   },
