--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.0"
+    "react-scripts": "0.9.0",
+    "standard": "^8.6.0"
   },
   "dependencies": {
     "react": "^15.4.2",
@@ -15,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "standard 'src/**/*.js'",
+    "lint-fix": "standard --fix 'src/**/*.js'"
   }
 }
