--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "redux": "^3.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=src/browser.js react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
