--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "v4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "memoizerific": "^1.10.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
