--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Twin-panel file manager",
   "private": true,
   "devDependencies": {
+    "buffer": "4",
+    "expect": "^1.20.2",
     "react-scripts": "0.9.0",
     "standard": "^8.6.0"
   },
