--- a/package.json
+++ b/package.json
@@ -6,26 +6,18 @@
   "devDependencies": {
     "buffer": "4",
     "expect": "^1.20.2",
-    "react-scripts": "0.9.0",
     "standard": "^8.6.0"
   },
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.6",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "memoizerific": "^1.10.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "virtual-dom": "^2.1.1"
   },
   "scripts": {
-    "start": "BROWSER=src/browser.js react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "standard 'src/**/*.js' 'src-gtk/**/*.js'",
-    "lint-fix": "standard --fix 'src/**/*.js' 'src-gtk/**/*.js'"
+    "start": "gjs src/utils/start.js",
+    "test": "gjs src/utils/test.js",
+    "lint": "standard 'src/**/*.js'",
+    "lint-fix": "standard --fix 'src/**/*.js'"
   }
 }
