--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "standard": "^8.6.0"
   },
   "dependencies": {
+    "inferno": "^1.3.0-rc.10",
+    "inferno-component": "^1.3.0-rc.10",
+    "inferno-hyperscript": "^1.3.0-rc.10",
     "lodash": "^4.17.4",
     "memoizerific": "^1.10.0",
-    "redux": "^3.6.0",
-    "virtual-dom": "^2.1.1"
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "gjs bin/start.js",
