--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "inferno": "^1.3.0-rc.10",
     "inferno-component": "^1.3.0-rc.10",
     "inferno-hyperscript": "^1.3.0-rc.10",
+    "inferno-redux": "^1.3.1",
     "lodash": "^4.17.4",
     "memoizerific": "^1.10.0",
     "redux": "^3.6.0"
