--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "inferno-redux": "^1.3.1",
     "lodash": "^4.17.4",
     "memoizerific": "^1.10.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "url-parse": "^1.1.8"
   },
   "scripts": {
     "start": "gjs bin/start.js 2>&1 | grep -v 'Message.*node_modules'",
