--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "inferno-redux": "^1.3.1",
     "lodash": "^4.17.4",
     "redux": "^3.6.0",
+    "uniq": "^1.0.1",
     "url-parse": "^1.1.8"
   },
   "scripts": {
