--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "standard": "^8.6.0"
   },
   "dependencies": {
+    "async": "^2.3.0",
     "inferno": "^1.3.0-rc.10",
     "inferno-component": "^1.3.0-rc.10",
     "inferno-hyperscript": "^1.3.0-rc.10",
