--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "buffer": "5.0.8",
     "expect": "^1.20.2",
+    "pre-commit": "^1.2.2",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
   },
@@ -35,5 +36,9 @@
     "coverage": "bash bin/coverage.sh 2>&1 | grep -v 'Message.*node_modules'",
     "format": "tslint --fix 'bin/**/*.js' 'src/**/*.js' && tsc",
     "repl": "gjs bin/repl.js"
-  }
+  },
+  "pre-commit": [
+    "format",
+    "test"
+  ]
 }
