--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "start": "NODE_ENV=development gjs bin/start.js 2>&1 | grep -v 'Message.*node_modules'",
     "test": "gjs bin/test.js 2>&1 | grep -v 'Message.*node_modules'",
     "coverage": "bash bin/coverage.sh 2>&1 | grep -v 'Message.*node_modules'",
+    "lint": "tslint 'bin/**/*.js' 'src/**/*.js' && tsc",
     "format": "tslint --fix 'bin/**/*.js' 'src/**/*.js' && tsc",
-    "repl": "gjs bin/repl.js"
+    "repl": "gjs bin/repl.js",
+    "postinstall": "mkdir -p \"$npm_config_prefix\"/share/applications/ && cp bin/acme-commander.desktop \"$npm_config_prefix\"/share/applications/",
+    "preuninstall": "rm -f \"$npm_config_prefix/share/applications/acme-commander.desktop\""
   },
   "pre-commit": [
-    "format",
+    "lint",
     "test"
   ]
 }
