--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=development gjs bin/start.js 2>&1 | grep -v 'Message.*node_modules'",
-    "test": "gjs bin/test.js 2>&1 | grep -v 'Message.*node_modules'",
+    "test": "NODE_ENV=production gjs bin/test.js 2>&1 | grep -v 'Message.*node_modules'",
     "coverage": "bash bin/coverage.sh 2>&1 | grep -v 'Message.*node_modules'",
     "lint": "tslint 'bin/**/*.js' 'src/**/*.js' && tsc",
     "format": "tslint --fix 'bin/**/*.js' 'src/**/*.js' && tsc",
