--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "inferno-mobx": "^3.10.1",
     "lodash": "^4.17.4",
     "mobx": "^3.3.1",
+    "ts-for-gjs": "https://github.com/makepost/ts-for-gjs",
     "url-parse": "^1.1.9"
   },
   "scripts": {
