--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^4.17.4",
     "mobx": "^3.3.3",
     "ts-for-gjs": "https://github.com/makepost/ts-for-gjs",
-    "url-parse": "^1.2.0"
+    "url-parse": "^1.2.0",
+    "util": "^0.10.3"
   },
   "scripts": {
     "start": "NODE_ENV=development gjs bin/start.js 2>&1 | grep -v 'Message.*node_modules'",
