Cursor: Open file on macOS

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "inferno-mobx": "^3.10.1",
     "lodash": "^4.17.4",
     "mobx": "^3.3.3",
+    "nextstep-plist": "^0.3.0",
     "nullthrows": "https://github.com/makepost/nullthrows",
     "ts-for-gjs": "https://github.com/makepost/ts-for-gjs",
     "url-parse": "^1.2.0",
