--- a/package.json
+++ b/package.json
@@ -7,32 +7,30 @@
   "author": "makepost <makepost@firemail.cc>",
   "license": "MIT",
   "devDependencies": {
-    "buffer": "5.0.8",
     "expect": "^1.20.2",
     "pre-commit": "^1.2.2",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2"
   },
   "dependencies": {
     "@types/async": "^2.0.45",
     "@types/expect": "^1.20.2",
     "@types/lodash": "^4.14.87",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^8.0.54",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.5.4",
     "@types/url-parse": "^1.1.0",
     "@types/webpack-env": "^1.13.2",
     "async": "^2.6.0",
-    "inferno": "^3.10.1",
-    "inferno-component": "^3.10.1",
-    "inferno-hyperscript": "^3.10.1",
-    "inferno-mobx": "^3.10.1",
+    "inferno": "^5.3.0",
+    "inferno-hyperscript": "^5.3.0",
+    "inferno-mobx": "^5.3.0",
     "lodash": "^4.17.4",
-    "mobx": "^3.3.3",
+    "mobx": "^5.0.3",
     "nextstep-plist": "^0.3.0",
-    "nullthrows": "https://github.com/makepost/nullthrows",
+    "nullthrows": "^1.0.2",
     "ts-for-gjs": "https://github.com/makepost/ts-for-gjs",
     "url-parse": "^1.2.0",
-    "util": "^0.10.3"
+    "util": "^0.11.0"
   },
   "scripts": {
     "start": "NODE_ENV=development gjs bin/start.js",
